--- a/subject.html
+++ b/subject.html
@@ -12,32 +12,32 @@
         <h3>my best player in the world </h3>
         <div class="medicine-container">
             <p>ronaldo</p>
-            <img src="images/images (1).jfif" alt="Failed to upload photo">
+            <img src="images (1).jfif" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
             <p>el dooooon</p>
-            <img src="images/download (2).jfif" alt="Failed to upload photo">
+            <img src="download (2).jfif" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
             <p>the best player in the world</p>
-            <img src="images/download.jfif" alt="Failed to upload photo">
+            <img src="download.jfif" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
             <p>ronaldo is better than messi</p>
-            <img src="images/images (1).jfif" alt="Failed to upload photo">
+            <img src="images (1).jfif" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
             <p>ronaldo his searname is Madeira missile</p>
-            <img src="images/images (2).jfif" alt="Failed to upload photo">
+            <img src="1" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
             <p>ronaldo is amazing</p>
-            <img src="images/images (3).jfif" alt="Failed to upload photo">
+            <img src="images (3).jfif" alt="Failed to upload photo">
         </div>
 
         <div class="medicine-container">
@@ -47,7 +47,8 @@
 
         <div class="medicine-container">
             <p>i Love he sooo much</p>
-            <img src="images/images.jfif" alt="Failed to upload photo">
+            <img src="2" alt="Failed to upload photo">
         </div>
 </body>
+
 </html>
